Add Supabase credentials

--- a/index.html
+++ b/index.html
@@ -871,9 +871,8 @@
         const { useState, useEffect, useRef, useCallback } = React;
 
         // Supabase Configuration
-        // Replace these with your actual Supabase credentials
-        const SUPABASE_URL = 'https://your-project.supabase.co';
-        const SUPABASE_ANON_KEY = 'your-anon-key';
+        const SUPABASE_URL = 'https://gejfhkkxossxpodcgrzi.supabase.co';
+        const SUPABASE_ANON_KEY = 'sb_publishable_hrZ4SZPTuDk0TfBZpYJAKA_ZBDL2TJO';
 
         // Check if Supabase is properly configured
         const isSupabaseConfigured = SUPABASE_URL !== 'https://your-project.supabase.co' && SUPABASE_ANON_KEY !== 'your-anon-key';
